# tp1

./: .gitignore  BlockingSharedQueue.cpp  BlockingSharedQueue.h  Boat.cpp  Boat.h  BoatGenerator.cpp  BoatGenerator.h  CLIReader.cpp  CLIReader.h  CMakeLists.txt  City.cpp  City.h  CityGenerator.cpp  CityGenerator.h  Configuration.cpp  Configuration.h  Control.cpp  Control.h  Engine.cpp  Engine.h  EventHandler.h  Generator.cpp  Generator.h  HDuplexChannel.cpp  HDuplexChannel.h  LICENSE  Lock.cpp  Lock.h  Logger.cpp  Logger.h  Person.cpp  Person.h  Process.cpp  Process.h  ProcessFactory.h  README.md  Random.h  Semaforo.cpp  Semaforo.h  SharedQueue.cpp  (+23 more)
entities/: People.cpp  People.h  TicketOffice.cpp  TicketOffice.h
informe/: informe.md
test/: SharedQueueTest  SharedQueueTest.cpp  shared_stack_test.cpp  test
